RESOLVED FIXED314978
[block-in-inline] Broken layout with paragraph spacing on Apple Support page
https://bugs.webkit.org/show_bug.cgi?id=314978
Summary [block-in-inline] Broken layout with paragraph spacing on Apple Support page
alan
Reported 2026-05-17 08:14:22 PDT
Attachments
Patch (58.45 KB, patch)
2026-05-17 10:16 PDT, alan
no flags
Patch (161.41 KB, patch)
2026-05-17 10:18 PDT, alan
ews-feeder: commit-queue-
Patch (57.19 KB, patch)
2026-05-17 18:15 PDT, alan
no flags
Patch (168.17 KB, patch)
2026-05-17 18:49 PDT, alan
no flags
[fast-cq]Patch (57.19 KB, patch)
2026-05-19 09:12 PDT, alan
no flags
alan
Comment 1 2026-05-17 10:16:10 PDT
alan
Comment 2 2026-05-17 10:18:57 PDT
EWS
Comment 3 2026-05-17 11:08:54 PDT
### iOS Safer C++ Build [#25005](https://ews-build.webkit.org/#/builders/174/builds/25005) () :x: Found [1 failing file with 1 issue](https://ews-build.s3-us-west-2.amazonaws.com/Apple-iOS-26-Safer-CPP-Checks-EWS/479697-25005/scan-build-output/new-results.html). Please address these issues before landing. See [WebKit Guidelines for Safer C++ Programming](https://github.com/WebKit/WebKit/wiki/Safer-CPP-Guidelines). (cc @rniwa)
EWS
Comment 4 2026-05-17 11:11:22 PDT
### iOS Safer C++ Build [#25010](https://ews-build.webkit.org/#/builders/174/builds/25010) () :x: Found [1 failing file with 1 issue](https://ews-build.s3-us-west-2.amazonaws.com/Apple-iOS-26-Safer-CPP-Checks-EWS/479698-25010/scan-build-output/new-results.html). Please address these issues before landing. See [WebKit Guidelines for Safer C++ Programming](https://github.com/WebKit/WebKit/wiki/Safer-CPP-Guidelines). (cc @rniwa)
alan
Comment 5 2026-05-17 18:15:39 PDT
alan
Comment 6 2026-05-17 18:49:41 PDT
EWS
Comment 7 2026-05-17 19:08:16 PDT
### iOS Safer C++ Build [#25887](https://ews-build.webkit.org/#/builders/174/builds/25887) () :x: Found [1 failing file with 1 issue](https://ews-build.s3-us-west-2.amazonaws.com/Apple-iOS-26-Safer-CPP-Checks-EWS/479700-25887/scan-build-output/new-results.html). Please address these issues before landing. See [WebKit Guidelines for Safer C++ Programming](https://github.com/WebKit/WebKit/wiki/Safer-CPP-Guidelines). (cc @rniwa)
EWS
Comment 8 2026-05-17 19:40:36 PDT
### iOS Safer C++ Build [#25942](https://ews-build.webkit.org/#/builders/174/builds/25942) () :x: Found [1 failing file with 1 issue](https://ews-build.s3-us-west-2.amazonaws.com/Apple-iOS-26-Safer-CPP-Checks-EWS/479701-25942/scan-build-output/new-results.html). Please address these issues before landing. See [WebKit Guidelines for Safer C++ Programming](https://github.com/WebKit/WebKit/wiki/Safer-CPP-Guidelines). (cc @rniwa)
alan
Comment 9 2026-05-19 09:12:53 PDT
Created attachment 479718 [details] [fast-cq]Patch
EWS
Comment 10 2026-05-19 10:55:27 PDT
Committed 313502@main (06ba90cd438a): <https://commits.webkit.org/313502@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479718 [details].
Sammy Gill
Comment 11 2026-05-21 10:34:10 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/60072
Note You need to log in before you can comment on or make changes to this bug.